--- a/index.html
+++ b/index.html
@@ -41,26 +41,74 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-4 mb-lg-0">
+            <div class="card mb-4">
                 <div class="card-body">
                     <h4 class="card-title">SKILLS</h4>
                     <div class="kotak-divider-15 mb-3"></div>
                     <div class="my-4">
                         <h6 class="text-muted">Performance Optimization</h6>
                         <div class="progress">
-                            <div class="progress-bar w-75 bg-dark" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="my-4">
                         <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
                         <div class="progress">
-                            <div class="progress-bar w-75 bg-dark" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="my-4">
                         <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
                         <div class="progress">
-                            <div class="progress-bar w-75 bg-dark" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h4 class="card-title">SKILLS</h4>
+                    <div class="kotak-divider-15 mb-3"></div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Performance Optimization</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="my-4">
+                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -126,7 +174,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card mb-4">
                 <div class="card-body">
                     <h4 class="card-title">EDUCATION</h4>
                     <div class="kotak-divider-15 mb-3"></div>
@@ -134,6 +182,53 @@
                         <h5>Master of Computer Science </h5>
                         <p class="fs-15 text-muted mb-2 text-bold">2015 - present</p>
                         
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h4 class="card-title">JOB HISTORY</h4>
+                    <div class="kotak-divider-15 mb-3"></div> 
+                    <div>
+                        <table class="table">
+                            <caption>Job History</caption>
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                                <th scope="col">Job</th>
+                                <th scope="col">Year</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                                <td>Lorem.</td>
+                                <td>2019</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                                <td>2020</td>
+                                <td>2020</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                                <td>2020</td>
+                                <td>2020</td>
+                              </tr>
+                            </tbody>
+                          </table>
                     </div>
                 </div>
             </div>
