--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
 <!-- AWAL  -->
 
 <div class="container">
-    <div class="jumbotron warna-jumbotron pb-0 pl-0 pt-3">
-        <h1 class="fs-48 text-bold">Name<br>Surname</h1>
-        <p class="text-muted fs-15">Job Title</p>
+    <div class="pb-0 pl-0 pt-3 mb-3">
+        <div class="row">
+        <div class="col-lg-2 col-4">
+            <img src="3.png" alt="foto profil" class="img-thumbnail img-fluid">
+        </div>
+        <div class="col-lg-10 col-8">
+            <h1 class="fs-48 text-bold">Name<br>Surname</h1>
+            <p class="text-muted fs-15">Job Title</p>
+        </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-lg-3 col-12">
@@ -79,38 +86,14 @@
             </div>
             <div class="card mb-4">
                 <div class="card-body">
-                    <h4 class="card-title">SKILLS</h4>
+                    <h4 class="card-title">TRAININGS</h4>
                     <div class="kotak-divider-15 mb-3"></div>
-                    <div class="my-4">
-                        <h6 class="text-muted">Performance Optimization</h6>
-                        <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="my-4">
-                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
-                        <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="my-4">
-                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
-                        <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="my-4">
-                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
-                        <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="my-4">
-                        <h6 class="text-muted">Troubleshooting and Solutions Deployment</h6>
-                        <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
+                    <ul class="list-group list-group-flush text-center">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                      </ul>
+                    
                 </div>
             </div>
         </div>
@@ -195,9 +178,9 @@
                             <thead>
                               <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
+                                <th scope="col">Company</th>
+                                <th scope="col">Location</th>
+                                <th scope="col">Division</th>
                                 <th scope="col">Job</th>
                                 <th scope="col">Year</th>
                               </tr>
@@ -205,27 +188,27 @@
                             <tbody>
                               <tr>
                                 <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Lorem.</td>
+                                <td>ABC</td>
+                                <td>Surabaya</td>
+                                <td>IT</td>
+                                <td>Software Engineer</td>
                                 <td>2019</td>
                               </tr>
                               <tr>
                                 <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>2020</td>
-                                <td>2020</td>
+                                <td>ABC</td>
+                                <td>Surabaya</td>
+                                <td>IT</td>
+                                <td>Software Engineer</td>
+                                <td>2019</td>
                               </tr>
                               <tr>
                                 <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                                <td>2020</td>
-                                <td>2020</td>
+                                <td>ABC</td>
+                                <td>Surabaya</td>
+                                <td>IT</td>
+                                <td>Software Engineer</td>
+                                <td>2019</td>
                               </tr>
                             </tbody>
                           </table>
