--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="3.png" alt="foto profil" class="img-thumbnail img-fluid">
         </div>
         <div class="col-lg-10 col-8">
-            <h1 class="fs-48 text-bold">Name<br>Surname</h1>
+            <h1 class="fs-48 text-bold text-primary">Name<br>Surname</h1>
             <p class="text-muted fs-15">Job Title</p>
         </div>
         </div>
@@ -172,7 +172,7 @@
                 <div class="card-body">
                     <h4 class="card-title">JOB HISTORY</h4>
                     <div class="kotak-divider-15 mb-3"></div> 
-                    <div>
+                    <div class="table-responsive">
                         <table class="table">
                             <caption>Job History</caption>
                             <thead>
